@@ -1,3 +1,7 @@
+  - Rename the log_chain function in Message::Passing::DSL
+    to message_chain to follow general rename, as we're not just
+    about logs.
+
 0.007
   - Documentation in the message-pass script
 
